--- a/ODExplorer/Controls/SettingsControls/BodyInfoDisplayControl.xaml
+++ b/ODExplorer/Controls/SettingsControls/BodyInfoDisplayControl.xaml
@@ -19,7 +19,7 @@
     <GroupBox Header="Current System Body Information Options"
               BorderBrush="{DynamicResource PrimaryControlBorder}"
               BorderThickness="0.5"
-              Padding="10">
+              Padding="5">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -33,13 +33,13 @@
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <TextBlock  Grid.Row="0"
                         Grid.ColumnSpan="2"
                         Foreground="{DynamicResource PrimaryForeground}"
                         FontSize="14"
-                        Margin="0,0,0,10"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
                         Text="Set which details are displayed in the current system bodies information column"
@@ -51,7 +51,6 @@
                         Width="200">
                 <TextBlock Text="N₂O₂"
                            FontSize="14"
-                           Margin="0,0,0,5"
                            HorizontalAlignment="Center"
                            Width="50"
                            TextAlignment="Center"
@@ -72,7 +71,6 @@
                            FontSize="14"
                            HorizontalAlignment="Center"
                            Width="50"
-                           Margin="0,0,0,5"
                            TextAlignment="Center"
                            Foreground="{DynamicResource DataGridRowUnknownBodyForeGround}"
                            Background="{DynamicResource DataGridRowUnknownBodyBackground}" />
@@ -89,7 +87,6 @@
                         Width="200">
                 <TextBlock Text="400 pa"
                            FontSize="14"
-                           Margin="0,0,0,5"
                            HorizontalAlignment="Center"
                            Width="50"
                            TextAlignment="Center"
@@ -107,8 +104,7 @@
                         Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
-                        Width="30"
-                        Margin="0,0,0,5">
+                        Width="30">
                 <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"  
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
@@ -131,8 +127,7 @@
                         Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
-                        Width="30"
-                        Margin="0,0,0,5">
+                        Width="30">
                     <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
@@ -155,8 +150,7 @@
                         Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
-                        Width="30"
-                        Margin="0,0,0,5">
+                        Width="30">
                     <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
@@ -179,8 +173,7 @@
                         Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
-                        Width="30"
-                        Margin="0,0,0,5">
+                        Width="30">
                     <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
@@ -203,8 +196,7 @@
                         Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <StackPanel Orientation="Horizontal" Background="{DynamicResource DataGridRowUnknownBodyBackground}"
-                        Width="40"
-                        Margin="0,0,0,5">
+                        Width="40">
                     <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
@@ -234,8 +226,7 @@
                         Width="200">
                 <StackPanel Orientation="Horizontal"
                             Background="{DynamicResource DataGridRowUnknownBodyBackground}"
-                            Width="40"
-                            Margin="0,0,0,5">
+                            Width="40">
                     <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
@@ -266,7 +257,6 @@
                 <TextBlock Text="0.25"
                            FontWeight="Bold"
                            FontSize="16"
-                           Margin="0,0,0,5"
                            HorizontalAlignment="Center"
                            Width="50"
                            TextAlignment="Center"
@@ -307,7 +297,6 @@
                         Width="200">
                 <TextBlock Text="5"
                            FontSize="14"
-                           Margin="0,0,0,5"
                            HorizontalAlignment="Center"
                            Width="20"
                            TextAlignment="Center"
@@ -317,6 +306,29 @@
                           Width="200"
                           Style="{DynamicResource CheckBoxStyle}"
                           IsChecked="{Binding ShowBodyId}" />
+            </StackPanel>
+
+            <StackPanel Orientation="Vertical"
+                        Grid.Column="0"
+                        Grid.Row="7"
+                        Margin="{StaticResource CheckBoxMargin}"
+                        Width="200">
+                <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
+                        Width="30">
+                    <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Height="18"
+                               Width="18">
+                        <Rectangle.OpacityMask>
+                            <ImageBrush ImageSource="/Resources/SystemGridIcons/footfall.png" />
+                        </Rectangle.OpacityMask>
+                    </Rectangle>
+                </Border>
+                <CheckBox Width="200"
+                          Content="First Footfall"
+                          Style="{DynamicResource CheckBoxStyle}"
+                          IsChecked="{Binding IconDisplay, Converter={StaticResource bodyinfoEnumConverter}, ConverterParameter={x:Static models:BodyInfoIconDisplay.Foorfall}}" />
             </StackPanel>
         </Grid>
     </GroupBox>
