--- a/ODExplorer/Controls/CartoDetailsControls/CartodataSystemList.xaml
+++ b/ODExplorer/Controls/CartoDetailsControls/CartodataSystemList.xaml
@@ -134,6 +134,14 @@
                             Margin="5"
                             Command="{Binding OpenSpansh}"
                             CommandParameter="{Binding ElementName=Root, Path=SelectedSystem}"/>
+
+                    <Button FontFamily="Segoe MDL2 Assets"
+                            Content="&#xF0E3;"
+                            Width="30"
+                            Height="30"
+                            Margin="5"
+                            Command="{Binding CopyToClipboard}"
+                            CommandParameter="{Binding ElementName=Root, Path=SelectedSystem.Name}" />
                 </StackPanel>
             </GroupBox>
 
