--- a/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentSystemControl.xaml
+++ b/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentSystemControl.xaml
@@ -180,8 +180,8 @@
                     <ColumnDefinition Width="{Binding ElementName=DataGrid, Path=Columns[2].ActualWidth, Mode=OneWay}" />
                     <ColumnDefinition Width="{Binding ElementName=DataGrid, Path=Columns[3].ActualWidth, Mode=OneWay}" />
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="{Binding ElementName=DataGrid, Path=Columns[15].ActualWidth, Mode=OneWay}" />
                     <ColumnDefinition Width="{Binding ElementName=DataGrid, Path=Columns[16].ActualWidth, Mode=OneWay}" />
-                    <ColumnDefinition Width="{Binding ElementName=DataGrid, Path=Columns[17].ActualWidth, Mode=OneWay}" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"
@@ -235,7 +235,7 @@
                               CellStyle="{DynamicResource BodiesGridCell}"
                               RowStyle="{DynamicResource RowStyleBodies}"
                               ColumnHeaderStyle="{DynamicResource DataGridHeaderLeft}"
-                              SelectedItem="{Binding ElementName=Root, Path=SelectedBody, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                              SelectedItem="{Binding ElementName=Root, Path=DataContext.SelectedBody, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         <DataGrid.Columns>
                             <!--0-->
                             <DataGridTemplateColumn Width="25"
@@ -368,49 +368,47 @@
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
                             <!--12-->
-                            <DataGridTemplateColumn Width="25"
+                            <DataGridTemplateColumn Width="50"
                                                     CellStyle="{DynamicResource BodyGridNonGridline}">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
+                                        <StackPanel Orientation="Horizontal"
+                                                    Visibility="{Binding GeologicalSignals, Converter={StaticResource IntToVisibilty}, ConverterParameter=Hidden}">
                                         <Rectangle Style="{DynamicResource Rectangle Style}"
-                                                   Visibility="{Binding GeologicalSignals, Converter={StaticResource IntToVisibilty}, ConverterParameter=Hidden}"
-                                                   Height="18"
+                                                    Height="18"
                                                    Width="18">
                                             <Rectangle.OpacityMask>
                                                 <ImageBrush ImageSource="/Resources/SystemGridIcons/volcano.png" />
                                             </Rectangle.OpacityMask>
                                         </Rectangle>
+                                            <TextBlock FontSize="18"
+                                                       Margin="2,0,0,0"
+                                                       Text="{Binding GeologicalSignalsString}" />
+                                        </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
                             <!--13-->
-                            <DataGridTextColumn Binding="{Binding GeologicalSignalsString}"
-                                                Width="25"
-                                                FontSize="18"
-                                                Visibility="{Binding Path=GeologicalSignals, Converter={StaticResource IntToVisibilty}, ConverterParameter=Hidden}"
-                                                CellStyle="{DynamicResource BodyGridInfoCellCenter}" />
-                            <!--14-->
-                            <DataGridTemplateColumn Width="25"
+                            <DataGridTemplateColumn Width="50"
                                                     CellStyle="{DynamicResource BodyGridNonGridline}">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Rectangle Style="{DynamicResource Rectangle Style}"
-                                                   Visibility="{Binding Path=BiologicalSignals, Converter={StaticResource IntToVisibilty}, ConverterParameter=Hidden}"
-                                                   Height="18"
-                                                   Width="18">
-                                            <Rectangle.OpacityMask>
-                                                <ImageBrush ImageSource="/Resources/SystemGridIcons/DNA.png" />
-                                            </Rectangle.OpacityMask>
-                                        </Rectangle>
+                                        <StackPanel Orientation="Horizontal"
+                                                    Visibility="{Binding Path=BiologicalSignals, Converter={StaticResource IntToVisibilty}, ConverterParameter=Hidden}">
+                                            <Rectangle Style="{DynamicResource Rectangle Style}"
+                                                       Height="18"
+                                                       Width="18">
+                                                <Rectangle.OpacityMask>
+                                                    <ImageBrush ImageSource="/Resources/SystemGridIcons/DNA.png" />
+                                                </Rectangle.OpacityMask>
+                                            </Rectangle>
+                                            <TextBlock FontSize="18"
+                                                       Text="{Binding BiologicalSignalsString}" />
+                                        </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <!--15-->
-                            <DataGridTextColumn Binding="{Binding BiologicalSignalsString}"
-                                                FontSize="18"
-                                                Visibility="{Binding Path=BiologicalSignals, Converter={StaticResource IntToVisibilty}, ConverterParameter=Hidden}"
-                                                CellStyle="{DynamicResource BodyGridInfoCellCenter}" />
-                            <!--16-->
+                            <!--14-->
                             <DataGridTemplateColumn Width="56"
                                                     CellStyle="{DynamicResource BodyGridInfoCellCenter}">
                                 <DataGridTemplateColumn.CellTemplate>
@@ -426,7 +424,7 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <!--17-->
+                            <!--15-->
                             <DataGridTextColumn Width="SizeToCells"
                                                 MinWidth="90"
                                                 Header="DISTANCE"
@@ -434,7 +432,7 @@
                                                 CellStyle="{DynamicResource BodyCellDoubleMargin}"
                                                 Binding="{Binding DistanceFromArrivalLs}"
                                                 ElementStyle="{DynamicResource DataGridElementRightMargin}" />
-                            <!--18-->
+                            <!--16-->
                             <DataGridTextColumn Header="VALUE"
                                                 Width="SizeToCells"
                                                 MinWidth="90"
