--- a/ODExplorer/Views/LoadingView.xaml
+++ b/ODExplorer/Views/LoadingView.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl x:Class="ODExplorer.Views.LoadingView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ODExplorer.Views"
              xmlns:controls="clr-namespace:ODExplorer.Controls"
              xmlns:odutilsControls="clr-namespace:ODUtils.Controls;assembly=ODUtils"
@@ -22,9 +22,9 @@
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
         <Image Source="/Resources/Astronaut.png"
                Grid.Row="0"
@@ -53,12 +53,13 @@
         </Image>
         <odutilsControls:LoadingSpinner Grid.Row="1" />
 
-        <TextBlock Text="{Binding StatusText, Mode=OneWay}"
-                   Grid.Row="2"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   FontSize="26"
-                   FontWeight="Bold" />
+        <TextBox Text="{Binding StatusText, Mode=OneWay}"
+                 Grid.Row="2"
+                 HorizontalContentAlignment="Center"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Center"
+                 FontSize="26"
+                 FontWeight="Bold" />
 
         <Button Width="180"
                 Grid.Row="2"
