--- a/ODExplorer/Notifications/SpanshNotificationPart.xaml
+++ b/ODExplorer/Notifications/SpanshNotificationPart.xaml
@@ -1,17 +1,18 @@
 ﻿<core:NotificationDisplayPart x:Class="ODExplorer.Notifications.SpanshNotificationPart"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ODExplorer.Notifications"
-             mc:Ignorable="d"
-             xmlns:core="clr-namespace:ToastNotifications.Core;assembly=ToastNotifications"
-             PreviewMouseDoubleClick="NotificationDisplayPart_PreviewMouseDoubleClick"
-             Foreground="{DynamicResource NotificationForeground}"
-             FontFamily="{StaticResource Eurostile}"
-             FontSize="{Binding Options.FontSize}"
-             d:DesignWidth="350"
-             d:DataContext="{d:DesignInstance local:CopyToClipboardNotification, IsDesignTimeCreatable=False}">
+                              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                              xmlns:local="clr-namespace:ODExplorer.Notifications"
+                              mc:Ignorable="d"
+                              Focusable="False"
+                              xmlns:core="clr-namespace:ToastNotifications.Core;assembly=ToastNotifications"
+                              PreviewMouseDoubleClick="NotificationDisplayPart_PreviewMouseDoubleClick"
+                              Foreground="{DynamicResource NotificationForeground}"
+                              FontFamily="{StaticResource Eurostile}"
+                              FontSize="{Binding Options.FontSize}"
+                              d:DesignWidth="350"
+                              d:DataContext="{d:DesignInstance local:CopyToClipboardNotification, IsDesignTimeCreatable=False}">
     <Border BorderThickness="{Binding BorderThickness}">
         <Border.Style>
             <MultiBinding Converter="{StaticResource StyleConverter}">
@@ -21,7 +22,7 @@
                 </MultiBinding.Bindings>
             </MultiBinding>
         </Border.Style>
-        <Grid >
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="4*" />
